# finance_calculator

./: README.md  displayFrame.py  fileManager.py  financeManager.py  main.py  mainWindow.py  navFrame.py  pyproject.toml  test.xml
controllers/: financeController.py
models/: fileManager.py  financeManager.py  schemas.py  storage.py
views/: addWindow.py  displayFrame.py  mainFrame.py  navFrame.py  transactionAppendWindow.py
