[tool.poetry]
name = "finance_calculator"
version = "0.1.0"
description = ""
authors = ["Oleg E <evstyunino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
